--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "claire/src/frontend"]
 	path = claire/src/frontend
 	url = git@github.com:aneshas/claire-frontend.git
+[submodule "claire/src/backend"]
+	path = claire/src/backend
+	url = git@github.com:aneshas/claire-go-backend.git
